--- a/MapGPT/package.json
+++ b/MapGPT/package.json
@@ -28,6 +28,7 @@
     "@tailwindcss/typography": "^0.5.12",
     "@upstash/redis": "^1.30.0",
     "ai": "^3.1.3",
+    "braces": "^3.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0",
@@ -52,6 +53,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/mapbox-gl": "^3.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
